<resources>
    <string name="app_name">get_your_tour_app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_profile">Profile</string>
    <string name="title_register">Login</string>
    <string name="textview1">¿Already have an account?</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="textmissingpass">¿Do you forget the password?</string>
    <string name="blogin">Login</string>
    <string name="textregister">¿Do not have an account yet?</string>
    <string name="bresgister">Sign up</string>
    <string name="register">Sign up</string>
    <string name="name">Name</string>
    <string name="lastname">Last names</string>
    <string name="confirm_pass">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ida">  Start</string>
    <string name="destiny">Grecia, París..</string>
    <string name="fecha_regreso">  End</string>
    <string name="search">Search</string>
    <string name="explore_tittle">Choose the place and dates you want to search</string>
    <string name="from_card">From</string>
    <string name="opinions">0 Opiniones</string>
    <string name="todo">TODO</string>
    <string name="opinions_amoung">Opinions</string>
    <string name="dollar_icon">$</string>
    <string name="favorites_text">This is the section of favorites</string>
    <string name="reservations_text">This is the section of reservations</string>
    <string name="data_user">User profile</string>
    <string name="user_name">User name: </string>
    <string name="val">val</string>
    <string name="logout">log out</string>
    <string name="login_error">User o Password incorrect</string>
    <string name="api_error">A problem occurred</string>
    <string name="warning">Warning</string>
    <string name="alert_button_name">accept</string>
    <string name="password_format">the password should have 1 Upercase, 1 undercase, one number and one character</string>
    <string name="email_error">Invalid Email</string>
    <string name="no_tours_available">No tours available</string>
</resources>