<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.get_your_tour_app.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore">
        <action
            android:id="@+id/action_navigation_explore_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.get_your_tour_app.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.get_your_tour_app.ui.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.get_your_tour_app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_explore"
            app:destination="@id/navigation_explore" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:label="@string/title_register"
        android:name="com.example.get_your_tour_app.ui.register.RegisterFragment"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.get_your_tour_app.ui.search.SearchFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_explore"
            app:destination="@id/navigation_explore" />
        <argument
            android:name="search"
            app:argType="com.example.get_your_tour_app.parcelables.SearchParcelable" />
    </fragment>

</navigation>