<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="166dp"
            android:layout_height="149dp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="39dp"
            android:layout_height="34dp"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignRight="@+id/imageView"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="124dp"
            android:layout_marginLeft="124dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="92dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_action_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="289dp"
            android:layout_marginLeft="289dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:text="@string/from_card" />

        <TextView
            android:id="@+id/price"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="247dp"
            android:layout_marginLeft="247dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:gravity="end"
            android:text="@string/dollar_icon"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="175dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:text="@string/opinions_amoung" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="178dp"
            android:layout_marginLeft="178dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="175dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:max="5"
            android:rating="2.5"
            android:scaleX=".7"
            android:scaleY=".7"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.905" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>